tests/negative/gold/primitive2-test.gold
tests/negative/primitive2-test.toit:6:10: error: Unresolved identifier: 'name'
 {{ some name }}
         ^~~~
tests/negative/primitive2-test.toit:6:5: error: Unresolved identifier: 'some'
 {{ some name }}
    ^~~~
Compilation failed
